k8s/mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: votingapp
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongo-pvc
          # hostPath:
          #   path: /mongo-data
          # emptyDir: {}
      containers:
        - image: mongo
          name: mongo
          volumeMounts:
            - name: data
              mountPath: /data/db
