k8s/tools.yml
apiVersion: v1
kind: Pod
metadata:
  name: tools
spec:
  containers:
    - name: tools
      image: paulopez/tools
      imagePullPolicy: Always
      args:
        - sleep
        - "99999"
