k8s/votingapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: votingapp
  name: votingapp
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 5000
  selector:
    run: votingapp
  type: ClusterIP
  # type: NodePort
  # type: LoadBalancer
