k8s/votingapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: votingapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myvotingapp
  name: myvotingapp
  namespace: votingapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myvotingapp
  template:
    metadata:
      labels:
        app: myvotingapp
    spec:
      containers:
        - name: myvotingapp
          image: paulopez/votingapp
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myvotingapp
  name: myvotingapp
  namespace: votingapp
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: myvotingapp
  # type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: myredis
  name: myredis
  namespace: votingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myredis
  template:
    metadata:
      labels:
        app: myredis
    spec:
      containers:
        - image: redis
          name: myredis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myredis
  name: myredis
  namespace: votingapp
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: myredis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 2
  labels:
    app: mynginx
  name: mynginx
  namespace: votingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynginx
  template:
    metadata:
      labels:
        app: mynginx
    spec:
      containers:
        - image: nginx
          name: mynginx
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config-volume
          configMap:
            name: mynginxconf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mynginx
  name: mynginx
  namespace: votingapp
spec:
  ports:
    - nodePort: 30500
      port: 80
      targetPort: 80
  selector:
    app: mynginx
  type: NodePort
